Trivial refactoring to Java 17 style